--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "homepage": "https://github.com/GhGeani/Node.js-Express-MySQL-Simple-CRUD#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-flash": "0.0.2",
     "express-myconnection": "^1.0.4",
+    "express-session": "^1.15.6",
+    "express-validation": "^1.0.2",
     "express-validator": "^5.3.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0"
